--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ img{
     color: #131313;
     margin-top: 40px;
     transition: all, 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    cursor: pointer;
 }
 
 .header-top-button:hover{
@@ -98,4 +99,16 @@ img{
     background: #0a8817;
     color: white;
     transition: all, 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+
+.header-motto{
+    font-family: "Seymour One", sans-serif;
+    font-weight: 400;
+    font-size: 38px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #fcfcfc;
+    max-width: 367px;
+    margin-top: 45px;
 }
