--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,21 @@ img{
     padding: 0 16px 0 16px;
 }
 
+
+/*
+--------------------------------------HEADER----------------------------------------
+*/
+
+
+
 .header{
     background: #84a178;
 }
 .header-container{
     height: 664px;
     margin: 0 auto;
+    position: relative;
 }
-
 
 .header-container-top{
     display: flex;
@@ -102,6 +109,16 @@ img{
 }
 
 
+.header-container-middle{
+    display: flex;
+    align-items: flex-start;
+}
+
+.header-container-middle-one{
+    display: flex;
+    flex-direction: column;
+}
+
 .header-motto{
     font-family: "Seymour One", sans-serif;
     font-weight: 400;
@@ -112,3 +129,179 @@ img{
     max-width: 367px;
     margin-top: 45px;
 }
+
+.header-container-middle-buttons{
+    display: flex;
+    gap: 34px;
+    margin-top: 28px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.products-button{
+    cursor: pointer;
+    width: 134px;
+    height: 42px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 129%;
+    text-align: center;
+    color: #131313;
+    border: 2px solid #f8d24e;
+    border-radius: 10px;
+    background: transparent;
+}
+
+.products-button:hover{
+    border: 2px solid #0a8817;
+}
+
+.products-button:first{
+    border: 2px solid #0a8817;
+    color: #fcfcfc;
+}
+
+.made-link{
+    font-weight: 600;
+    font-size: 14px;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    text-align: center;
+    color: #f8d24e;
+}
+
+.image-wrapper {
+    position: absolute;
+    top: 114px;
+    left: 54.25%;
+    max-width: 447px;
+    width: 100%;
+    height: auto;
+}
+
+
+.header-main-image-container1 {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+.header-main-image1 {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.header-main-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+}
+
+.header-main-image {
+    width: 100%;
+    height: auto;
+}
+
+.header-container-middle-numbers-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-top: 56px;
+    margin-left: auto;
+    gap: 27px;
+}
+
+.header-container-middle-numbers-text-one{
+    font-weight: 900;
+    font-size: 46px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    text-align: right;
+    color: #131313;
+    margin-left: auto;
+}
+
+.header-container-middle-numbers-text-two{
+    font-weight: 400;
+    font-size: 14px;
+    text-align: right;
+    color: #fcfcfc;
+    
+    margin-left: auto;
+}
+
+.header-dots{
+    max-width: 100%;
+    width: 100%;
+    height:auto;
+    position:absolute;
+    bottom:0;
+    left: 0;
+}
+
+.header-dots-img{
+    width: 100%;
+    height: auto;
+}
+
+.header-plate{
+    margin-top: 42px;
+    display: flex;
+    gap:14px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.header-plate-image-container{
+    max-width: 225px;
+    width: 100%;
+    height: auto;
+}
+
+.header-plate-image{
+    width: 100%;
+    height: auto;
+}
+
+.header-plate-text-container{
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+    gap: 32px;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 67px;
+}
+
+.header-plate-text{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    color: #fcfcfc;
+}
+
+@media (max-width: 1250px){
+    .container{
+        width: 100%;
+    }
+}
+@media (min-width: 769px) and (max-width: 1158px){
+    .image-wrapper {
+        max-width: 270px;
+    }
+    .header-container{
+        height: 415px;
+    }
+    
+}
+/*
+--------------------------------------MAIN----------------------------------------
+*/
+
+
+
