--- a/styles.css
+++ b/styles.css
@@ -950,11 +950,11 @@ img{
     transition: all, 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.footer-sl-item img:hover{
-    filter: brightness(0) invert(1);
-    transition: all, 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
-}
 
+.footer-sl-item:hover img {
+    filter: brightness(0) invert(1);
+    transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
 
 .footer-sl-item:focus{
     width: 38px;
